--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,16 @@
 <resources>
     <string name="app_name">QuizApp</string>
+    <string name="share_this_app">Share this app</string>
+    <string name="rate_us">Rate us</string>
+    <string name="leave_feedback">Leave feedback</string>
+    <string name="clear_history">Clear history</string>
+    <string name="history">History</string>
+    <string name="quiz">Quiz</string>
+    <string name="questions_amount">Questions amount:</string>
+    <string name="_10">10</string>
+    <string name="category">Category:</string>
+    <string name="difficulty">Difficulty:</string>
+    <string name="start">START</string>
     <string-array name="category_list">
         <item>All</item>
         <item>General Knowledge</item>
