--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
         <item>Entertainment: Cartoon &amp; Animations</item>
     </string-array>
     <string-array name="difficulty_list">
-        <item>Any</item>
+        <item>Any difficulty</item>
         <item>Easy</item>
         <item>Medium</item>
         <item>Hard</item>
